--- a/estilo.css
+++ b/estilo.css
@@ -40,13 +40,14 @@ body * {
 }
 
 #container {
-    width: 360px;    
-    margin: auto;
+    width: 100%; 
+    max-width: 588px;   
+    margin: 56px auto;
     margin-top: 56px;
 }
 
 #profile {
-    padding: 24px;
+    padding:0 24px;
 }
 
 #profile img {
@@ -106,7 +107,7 @@ ul {
     display: flex;
     flex-direction: column;
     gap: 16px;
-    padding: 24px 0;
+    padding: 24px 12px;
 }
 
 ul li a {
