--- a/estilo.css
+++ b/estilo.css
@@ -163,3 +163,15 @@ footer {
     font-size: 14px;
     margin-top: 140px;
 }
+
+/* media query */
+
+@media (min-width: 700px) {
+    :root {
+        --bg-url:  url(./assets/darkedit.jpg);
+    }
+    
+    .light {
+        --bg-url:  url(./assets/whiteedit.jpg);
+    }
+}
