--- a/estilo.css
+++ b/estilo.css
@@ -83,12 +83,16 @@ body * {
     left: 0;
     z-index:1;
     transform: translateY(-50%);
+    animation: slide-back 0.4s forwards;
 }
 
 .light #switch button {
-    right: 0;
-    left: initial;
+    animation: slide-in 0.4s forwards;
     
+}
+
+#switch button:hover {
+    outline: 8px solid var(--hightligh-color);
 }
 
 #switch span{
@@ -107,7 +111,7 @@ ul {
     display: flex;
     flex-direction: column;
     gap: 16px;
-    padding: 24px 12px;
+    padding: 24px 24px;
 }
 
 ul li a {
@@ -161,7 +165,7 @@ ul li a:hover {
 footer {
     text-align: center;
     font-size: 14px;
-    margin-top: 140px;
+    margin-top: 50px;
 }
 
 /* media query */
@@ -170,8 +174,22 @@ footer {
     :root {
         --bg-url:  url(./assets/darkedit.jpg);
     }
-    
+
     .light {
         --bg-url:  url(./assets/whiteedit.jpg);
+    }
+}
+
+/* animation */
+@keyframes slide-in {
+    from {left: 0;
+    }
+    to {left: 50%;
+    }
+}
+@keyframes slide-back {
+    from {left: 50%
+    }
+    to {left : 0;
     }
 }
